--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,53 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
+# ==============================
+# Node.js dependencies
+# ==============================
+node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# ==============================
+# Environment files
+# ==============================
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+config.env
+client/.env
+server/config.env
 
-# vercel
-.vercel
+# ==============================
+# Build outputs
+# ==============================
+dist/
+build/
+.next/
+out/
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# ==============================
+# Logs
+# ==============================
+logs
+*.log
+*.log.*
+*.out
+*.pid
+*.seed
+
+# ==============================
+# OS / Editor files
+# ==============================
+.DS_Store
+Thumbs.db
+.vscode/
+.idea/
+*.swp
+
+# ==============================
+# Misc
+# ==============================
+coverage/
+*.tgz
