--- a/server/package.json
+++ b/server/package.json
@@ -9,11 +9,11 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.18.0",
     "mongoose": "^8.17.1",
     "morgan": "^1.10.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10",
     "eslint": "^8.57.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^10.1.8",
@@ -22,6 +22,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
+    "nodemon": "^3.1.10",
     "prettier": "^3.6.2"
   }
 }
