--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.18.0",
     "mongoose": "^8.17.1",
-    "morgan": "^1.10.1"
+    "morgan": "^1.10.1",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "eslint": "^8.57.1",
